--- a/runner.html
+++ b/runner.html
@@ -1,6 +1,5 @@
 <script src="app/tools/autoloader.js" ></script>
 <script src="app.js" ></script>
+<script src="runner.js" ></script>
 
 <div id="app" >app</div>
-
-<script>app().init()</script>
