Moved runner to app/tools.

--- a/runner.html
+++ b/runner.html
@@ -1,5 +1,5 @@
 <script src="app/tools/autoloader.js" ></script>
 <script src="app.js" ></script>
-<script src="runner.js" ></script>
+<script src="app/tools/runner.js" ></script>
 
 <div id="app" >app</div>
