Converted character inventory storage to item id list.

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,19 +13,20 @@
 
   <!-- include source files here... -->
   <script src="../app/tools/autoloader.js"></script>
-  <script src="../app.js"></script>
+  <!--script src="../app.js"></script-->
 
 
   <!-- include spec files here... -->
-  <script src="spec/toolsSpec.js"></script>
-  <script src="spec/thingsSpec.js"></script>
-  <script src="spec/appSpec.js"></script>
+  <!--script src="spec/toolsSpec.js"></script-->
+  <script src="spec/storeSpec.js"></script>
+  <!--script src="spec/thingsSpec.js"></script-->
+  <!--script src="spec/appSpec.js"></script-->
 
 
 </head>
 
 <body>
-  <div id="app" >app</div>
-  <script>app().init()</script>
+  <!--div id="app" >app</div>
+  <script>app().init()</script-->
 </body>
 </html>
