Working things, inventory, actions, places.

--- a/clearing.html
+++ b/clearing.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="app/css/clearing.css">
+
 <script src="app/tools/autoloader.js" ></script>
 <script src="app.js" ></script>
 
