--- a/app/data/places/clearing.html
+++ b/app/data/places/clearing.html
@@ -1,4 +1,4 @@
-Your standing in a clearing ...
+You are standing in a clearing ...
 <p>
 Dappled sunlight throws rods of golden light tween languid leaves raining puddles of light across the woodland ground.
 Bushes, bramble, briar and crooked limbs entwine in fearce embrase.
