--- a/app/data/places/clearing.html
+++ b/app/data/places/clearing.html
@@ -1,6 +1,11 @@
+<body id="text" >
+<div id="text" >
+<p class="title">
 You are standing in a clearing ...
 <p>
 Dappled sunlight throws rods of golden light tween languid leaves raining puddles of light across the woodland ground.
-Bushes, bramble, briar and crooked limbs entwine in fearce embrase.
+Bushes, bramble, briar and crooked limbs entwine in fearce embrace.
 And you are lost.
 And yet you are now found, but where, the path leads on ...
+</div>
+</body>
